--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-streamlit==1.31.1
-python-dotenv==1.0.1
-requests==2.31.0
-APScheduler==3.10.4
-trakt.py==4.4.0
-streamlit-oauth==0.1.14
-watchdog==3.0.0
-schedule==1.2.1
+# Core dependencies for Trakt2EmbySync
+streamlit>=1.22.0
+python-dotenv>=0.21.0
+requests>=2.28.1
+schedule>=1.1.0
+watchdog>=2.1.9
